Switch to Java Math's clamping methods vs. nested min/max calls, as they are easier to read and to avoid mistakes. The feature was added to Java after Java 8, so these libraries had not yet caught up with the upgraded version of Java Math.